feat(docs): add docs